--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist'  # Путь к собранным файлам (измените если нужно)
+          path: 'public'  # Путь к собранным файлам (измените если нужно)
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4 
